Changelog
=========

0.3 (unreleased)
----------------

* Removed zope.app.publisher dependency, use now zope.browserresource.

0.2.2 (2009-09-25)
------------------

* Using the last `dolmen.field` version with a bug fix.


0.2.1 (2009-09-20)
------------------

* Added tests and cleaned the testing module.


0.2 (2009-09-04)
----------------

* Added an OrderedContainer base class.


0.1 (2009-09-01)
----------------

* Initial release