@@ -5,8 +5,6 @@
 
   <include package="zope.component" file="meta.zcml" />
   <include package="zope.security" file="meta.zcml" />
-  <include package="zope.securitypolicy" file="meta.zcml" />
-  <include package="zope.i18n" file="meta.zcml" />
 
   <include package="dolmen.content" />
   <include package="zope.security" />
